--- a/.github/workflows/buildpush_stage.yaml
+++ b/.github/workflows/buildpush_stage.yaml
@@ -37,7 +37,7 @@ jobs:
     secrets:
       aws_role: ${{ secrets.AWS_GITHUB_ROLE_ARN_STAGE }}
       aws_region: ${{ secrets.AWS_REGION_STAGE }}
-      env: ${{ secrets.DJANGO_ENV }}
+      env: ${{ secrets.ENCODED_DJANGO_ENV }}
       bucket: ${{ needs.get_env.outputs.ENV_BUCKET }}
     with:
       targetname: django-celery.env
